--- a/src/CreditHistory/CHistory.css
+++ b/src/CreditHistory/CHistory.css
@@ -198,3 +198,36 @@
 .button-container button:hover {
     background-color: #014711;
 }
+
+.credit-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: auto; /* Para centrar la tabla */
+    border-radius: 10px; /* Bordes redondeados */
+    overflow: hidden; /* Para evitar que los bordes redondeados se corten */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra ligera para destacar */
+}
+
+.credit-table th,
+.credit-table td {
+    padding: 10px;
+    text-align: center;
+    border: 1px solid #ddd; /* Borde delgados entre celdas */
+}
+
+.credit-table th {
+    background-color: #f2f2f2; /* Fondo gris claro para encabezados */
+}
+
+.credit-table tbody tr:hover {
+    background-color: #f5f5f5; /* Color de fondo al pasar el mouse */
+}
+
+.credit-table .estado-color {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin-right: 5px;
+    vertical-align: middle;
+}
